# Praxis

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  License.md  Makefile  README.md  Spec.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  nightly.yaml
configs/: logging.yaml  utils.yaml
configs/eval/: arc_suite.yaml  leetcode_easy.yaml  regression.yaml  stress.yaml
configs/orchestrator/: default.yaml
configs/synth/: default.yaml  retrieval.yaml
configs/synth/search_profiles/: curriculum.yaml  fast.yaml  smt_heavy.yaml  thorough.yaml
configs/training/: preference.yaml  rl.yaml  supervised.yaml
configs/translator/: glossary.yaml  nl_default.yaml
configs/verifier/: smt.yaml  static.yaml
data/cache/: telemetry.jsonl
docs/: architecture.md  data_generation.md  dsl.md  explanation_examples.md  glossary.md  human_feedback.md  proof_bridge.md  testing_strategy.md  training_playbook.md  translator.md  verifier.md  vm_bytecode.md
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
rust/verifier_native/: Cargo.toml
rust/verifier_native/src/: checkers.rs  lib.rs  metamorphic.rs  static.rs
rust/vm_runtime/: Cargo.toml
rust/vm_runtime/src/: builtins.rs  bytecode.rs  compiler.rs  interpreter.rs  ir.rs  lib.rs  memory.rs  sandbox.rs  trace.rs
scripts/: bootstrap_env.sh  eval_suite.py  export_checkpoint.py  ingest_feedback.py  lint_ci.sh  run_task.py  run_text_prompt.py  seed_curriculum.py  sync_kb.py  train_preference.py  train_rl.py  train_supervised.py
src/: lib.rs
tests/python/: test_curriculum.py  test_dsl_parser.py  test_end_to_end_structured.py  test_end_to_end_text.py  test_explanations.py  test_feedback_queue.py  test_guidance_preference.py  test_guidance_rl.py  test_guidance_supervised.py  test_guidance_utils.py  test_orchestrator.py  test_proof_bridge.py  test_retrieval.py  test_sandbox_security.py  test_serializer.py  test_synthesizer_frontier.py  test_synthesizer_search.py  test_telemetry_hooks.py  test_text_interface.py  test_translator_decoder.py  test_translator_validator.py  test_type_system.py  test_utils_concurrency.py  test_utils_sandbox.py  test_verifier_diff_checker.py  test_verifier_native_bridge.py  test_verifier_properties.py  test_verifier_runner.py  test_verifier_static.py
tests/python/fixtures/programs/: array_reverse.dsl  graph_path.dsl  histogram.dsl
tests/python/fixtures/prompts/: text_graph.json  text_sorting.json
tests/python/fixtures/specs/: array_reverse.yaml  dp_min_cost.yaml  graph_path.yaml  histogram.yaml  matrix_mult.yaml
tests/rust/verifier_native/: properties.rs  static.rs
tests/rust/vm_runtime/: integration.rs
