[tool.poetry]
name = "praxis"
version = "0.1.0"
description = "Praxis reasoning engine scaffold"
authors = ["Praxis Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
