[package]
name = "praxis_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
ordered-float = "3.9"
praxis_verifier_native = { path = "../verifier_native" }
praxis_vm_runtime = { path = "../vm_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
